router link set

--- a/src/app/shared-module/components/login-massage/login-massage.component.html
+++ b/src/app/shared-module/components/login-massage/login-massage.component.html
@@ -1,4 +1,4 @@
 <div>
     <span>Have An Account? Then, </span>
-    <a href="#" role="button" class="btn btn-primary btn-sm active" aria-pressed="true">LogIn</a>
+    <a routerLink='auth/login' role="button" class="btn btn-primary btn-sm active" aria-pressed="true">LogIn</a>
 </div>
