--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <div class="rootData">
-  <h5>Welcome To UserAdmiN APP</h5>
-  <app-login-massage></app-login-massage>
-  <app-register-massage></app-register-massage>
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
