--- a/src/app/auth-module/components/login/login.component.html
+++ b/src/app/auth-module/components/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <label>
+      Email : 
+      <input type="text" formControlName="Email" placeholder="Enter Email">
+    </label>
+    <label>
+      Password : 
+      <input type="text" formControlName="Password" placeholder="Enter Password">
+    </label>
+    <br/>
+    <button type="submit" class="btn btn-default">LogIn</button>
+</form>
+<br> -->
+
+<app-register-massage></app-register-massage>
