--- a/src/app/static-components/user-icon/user-icon.component.html
+++ b/src/app/static-components/user-icon/user-icon.component.html
@@ -5,8 +5,8 @@
     </button>
     <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right"
         role="menu" aria-labelledby="button-animated">
-      <li role="menuitem"><a class="dropdown-item" href="#">Profile</a></li>
-      <li role="menuitem"><a class="dropdown-item" href="#">UserList</a></li>
-      <li role="menuitem"><a class="dropdown-item" href="#">LogOut</a></li>
+      <li role="menuitem"><a class="dropdown-item" routerLink="profile">Profile</a></li>
+      <li role="menuitem"><a class="dropdown-item" routerLink="userlist">UserList</a></li>
+      <li role="menuitem"><a class="dropdown-item" routerLink="auth/logout">LogOut</a></li>
     </ul>
   </div>
