--- a/src/app/auth-module/components/login/login.component.html
+++ b/src/app/auth-module/components/login/login.component.html
@@ -1,8 +1,9 @@
-<!-- <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form formGroup="loginForm" (ngSubmit)="onSubmit()">
     <label>
       Email : 
       <input type="text" formControlName="Email" placeholder="Enter Email">
     </label>
+    <br>
     <label>
       Password : 
       <input type="text" formControlName="Password" placeholder="Enter Password">
@@ -10,6 +11,6 @@
     <br/>
     <button type="submit" class="btn btn-default">LogIn</button>
 </form>
-<br> -->
+<br>
 
 <app-register-massage></app-register-massage>
