--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="headerText bg-light">
-    <h3><a routerLink=''>UserAdmiN APP</a></h3>
+    <h3><a routerLink='home'>UserAdmiN APP</a></h3>
     <app-user-icon></app-user-icon>
 </div>
