--- a/src/app/auth-module/components/login/login.component.html
+++ b/src/app/auth-module/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form formGroup="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <label>
       Email : 
       <input type="text" formControlName="Email" placeholder="Enter Email">
