--- a/src/app/auth-module/components/register/register.component.html
+++ b/src/app/auth-module/components/register/register.component.html
@@ -1,41 +1,66 @@
-<form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
-    <label>
-        First Name : 
-        <input type="text" formControlName="FirstName" placeholder="Enter First Name">
-    </label>
-    <br>
-    <label>
-        Last Name : 
-        <input type="text" formControlName="LastName" placeholder="Enter First Name">
-    </label>
-    <br>
-    <label>
-        Email : 
-        <input type="text" formControlName="Email" placeholder="Enter Email">
-    </label>
-    <br>
-    <label>
-        Password : 
-        <input type="text" formControlName="Password" placeholder="Enter Password">
-    </label>
-    <br/>
-    <label>
-        Confirm Password : 
-        <input type="text" formControlName="ConfirmPassword" placeholder="Re-enter Password">
-    </label>
-    <br/>
-    <div formGroupName="Role">
-        <h3>Role : </h3>
-        <label> 
-            <input type="radio" formControlName="user">User
-        </label>
-        <label> 
-            <input type="radio" formControlName="admin">Admin
-        </label>
-        <br/>
+<div class="card">
+    <h4 class="card-header">Registration</h4>
+    <div class="card-body">
+        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="first-name">First Name : </label>
+                <input type="text" formControlName="FirstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.FirstName.errors }" />
+                <div *ngIf="submitted && f.FirstName.errors" class="invalid-feedback">
+                    <div *ngIf="f.FirstName.errors.required">First Name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="last-name">Last Name : </label>
+                <input type="text" formControlName="LastName" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="email">Email : </label>
+                <input type="text" formControlName="Email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" />
+                <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
+                    <div *ngIf="f.Email.errors.required">Email is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password : </label>
+                <input type="password" formControlName="Password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+                <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
+                    <div *ngIf="f.Password.errors.required">Password is required</div>
+                    <div *ngIf="f.Password.errors.minlength">Password should at least 6 digit</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password : </label>
+                <input type="password" formControlName="ConfirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted 
+                && (f.ConfirmPassword.errors || (registrationForm.errors?.mismatch 
+                && (registrationForm.controls['ConfirmPassword'].dirty 
+                || registrationForm.controls['ConfirmPassword'].touched))) }" />
+
+                <div *ngIf="submitted && registrationForm.errors?.mismatch 
+                    && (registrationForm.controls['ConfirmPassword'].dirty 
+                    || registrationForm.controls['ConfirmPassword'].touched)" class="invalid-feedback"> Password mismatched</div>
+
+                <div *ngIf="submitted && f.ConfirmPassword.errors" class="invalid-feedback">
+                    <div *ngIf="f.ConfirmPassword.errors.required">Password is required</div>
+                    <div *ngIf="f.ConfirmPassword.errors.minlength">Password should at least 6 digit</div>
+                </div>
+            </div>
+            <span>Role: </span>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Role" id="userRole" value="user">
+                <label class="form-check-label" for="userRole">USER</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Role" id="adminRole" value="admin" [attr.disabled]=true>
+                <label class="form-check-label" for="adminRole">ADMIN</label>
+            </div>
+            <div class="form-group">
+                <button [disabled]="loading" class="btn btn-primary">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Register
+                </button>
+            </div>
+        </form>
     </div>
-    <button type="submit" class="btn btn-default">Register</button>
-</form>
-<br>
+  </div>
 
 <app-login-massage></app-login-massage>
