--- a/src/app/auth-module/components/login/login.component.html
+++ b/src/app/auth-module/components/login/login.component.html
@@ -1,12 +1,18 @@
 <div class="card">
   <h4 class="card-header">Login</h4>
   <div class="card-body">
+    <div *ngIf="!isCorrectPassword" class="alert alert-danger" role="alert">
+        Email or password is incorrect
+    </div>
+
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
               <label for="email">Email : </label>
               <input type="text" formControlName="Email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" />
               <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
                   <div *ngIf="f.Email.errors.required">Email is required</div>
+                  <div *ngIf="f.Email.errors.mismatch">All charecter should not space</div>
+                  <div *ngIf="f.Email.errors.pattern">Should valid email pattern</div>
               </div>
           </div>
           <div class="form-group">
@@ -15,6 +21,7 @@
               <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
                   <div *ngIf="f.Password.errors.required">Password is required</div>
                   <div *ngIf="f.Password.errors.minlength">Password should at least 6 digit long</div>
+                  <div *ngIf="f.Password.errors.mismatch">All charecter should not space</div>
               </div>
           </div>
           <div class="form-group">
