--- a/src/app/auth-module/components/logout/logout.component.html
+++ b/src/app/auth-module/components/logout/logout.component.html
@@ -1,1 +1,2 @@
-<p>logout works!</p>
+<p>Thanks for using our service</p>
+<button role="button" (click)="onClick()" class="btn btn-primary btn-sm active">LogIn</button>
