--- a/src/app/user-module/components/user-list/user-list.component.html
+++ b/src/app/user-module/components/user-list/user-list.component.html
@@ -2,17 +2,15 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Email</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let user of users">
-            <td>{{user.FirstName}}</td>
-            <td>{{user.LastName}}</td>
+            <td>{{user.Email}}</td>
             <td id="wrapper">
-                <a routerLink="edit/{{user.id}}" class="btn btn-sm btn-primary mr-1">Edit</a>
+                <a routerLink="profile/{{user.id}}/accountInfo" class="btn btn-sm btn-primary mr-1">Edit</a>
                 <button (click)="deleteUser(user.id)" class="btn btn-sm btn-danger btn-delete-user" [disabled]="user.isDeleting">
                     <span *ngIf="user.isDeleting" class="spinner-border spinner-border-sm"></span>
                     <span *ngIf="!user.isDeleting">Delete</span>
