--- a/src/app/user-module/components/user-welcome/user-welcome.component.html
+++ b/src/app/user-module/components/user-welcome/user-welcome.component.html
@@ -1,1 +1,7 @@
-<p>user-welcome works!</p>
+<div class="p-4">
+    <div class="container">
+        <h1>Hi {{userName | uppercase}}!</h1>
+        <p>You're logged in this app!!</p>
+        <p><a routerLink="list/profile/{{id}}/accountInfo">See Profile</a></p>
+    </div>
+</div>
