profile section completed

--- a/src/app/profile-module/components/user-info/user-info.component.html
+++ b/src/app/profile-module/components/user-info/user-info.component.html
@@ -1,1 +1,52 @@
-<p>user-info works!</p>
+<div class="card">
+    <h4 class="card-header">User Personal Information</h4>
+    <div class="card-body">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="first-name">First Name : </label>
+                <input type="text" formControlName="FirstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.FirstName.errors }" />
+                <div *ngIf="submitted && f.FirstName.errors" class="invalid-feedback">
+                    <div *ngIf="f.FirstName.errors.required">First Name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="last-name">Last Name : </label>
+                <input type="text" formControlName="LastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.LastName.errors }" />
+                <div *ngIf="submitted && f.LastName.errors" class="invalid-feedback">
+                    <div *ngIf="f.LastName.errors.required">Last Name is required</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="date-of-birth">Date of birth : </label>
+                <input type="text" formControlName="DateOfBirth" placeholder="Date of birth" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="interests">Interests : </label>
+                <input type="text" formControlName="Interest" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label for="address">Address : </label>
+                <input type="text" formControlName="Address" class="form-control"/>
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone : </label>
+                <input type="text" formControlName="Phone" class="form-control"/>
+            </div>
+            <span>Gender: </span>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Gender" id="male" value="male">
+                <label class="form-check-label" for="male">MALE</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Gender" id="female" value="female">
+                <label class="form-check-label" for="female">FEMALE</label>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary">
+                    <span *ngIf="submitted" class="spinner-border spinner-border-sm mr-1"></span>
+                    Update
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
