--- a/src/app/user-module/components/user-welcome/user-welcome.component.html
+++ b/src/app/user-module/components/user-welcome/user-welcome.component.html
@@ -2,6 +2,6 @@
     <div class="container">
         <h1 appItalicStyle >Hi {{userName | uppercase}}!</h1>
         <p>You're logged in this app!!</p>
-        <p><a routerLink="list/profile/{{id}}/accountInfo">See Profile</a></p>
+        <p><a routerLink="list/profile/{{id}}">See Profile</a></p>
     </div>
 </div>
