--- a/src/app/_components/user-icon/user-icon.component.html
+++ b/src/app/_components/user-icon/user-icon.component.html
@@ -5,7 +5,7 @@
     </button>
     <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu dropdown-menu-right"
         role="menu" aria-labelledby="button-animated">
-      <li *ngIf="loginState" role="menuitem"><a class="dropdown-item" routerLink="profile/{{loginState.id}}/accountInfo">Profile</a></li>
+      <li *ngIf="loginState" role="menuitem"><a class="dropdown-item" routerLink="profile/{{loginState.id}}">Profile</a></li>
       <li *ngIf="loginState && loginState.Role === 'admin'" role="menuitem"><a class="dropdown-item" routerLink="user/list">UserList</a></li>
       <li *ngIf="loginState" role="menuitem"><a class="dropdown-item" routerLink="auth/logout">LogOut</a></li>
       <li *ngIf="!loginState" role="menuitem"><a class="dropdown-item" routerLink="auth/login">LogIn</a></li>
