--- a/src/app/profile-module/components/account-info/account-info.component.html
+++ b/src/app/profile-module/components/account-info/account-info.component.html
@@ -1,1 +1,59 @@
-<p>account-info works!</p>
+<div class="card">
+    <h4 class="card-header">User Account Information</h4>
+    <div class="card-body">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="email">Email : </label>
+                <input type="text" formControlName="Email" class="form-control" 
+                    [ngClass]="{ 'is-invalid': submitted && f.Email.errors }" [attr.disabled]=true/>
+                <div *ngIf="submitted && f.Email.errors" class="invalid-feedback">
+                    <div *ngIf="f.Email.errors.required">Email is required</div>
+                    <div *ngIf="f.Email.errors.pattern">Should valid email pattern</div>
+                    <div *ngIf="f.Email.errors.mismatch">All charecter should not space</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Password : </label>
+                <input type="password" formControlName="Password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.Password.errors }" />
+                <div *ngIf="submitted && f.Password.errors" class="invalid-feedback">
+                    <div *ngIf="f.Password.errors.required">Password is required</div>
+                    <div *ngIf="f.Password.errors.minlength">Password should at least 6 digit</div>
+                    <div *ngIf="f.Password.errors.mismatch">All charecter should not space</div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="confirm-password">Confirm Password : </label>
+                <input type="password" formControlName="ConfirmPassword" class="form-control" [ngClass]="{ 'is-invalid': submitted 
+                && (f.ConfirmPassword.errors || (form.errors?.mismatch 
+                && (form.controls['ConfirmPassword'].dirty 
+                || form.controls['ConfirmPassword'].touched))) }" />
+
+                <div *ngIf="submitted && form.errors?.mismatch 
+                    && (form.controls['ConfirmPassword'].dirty 
+                    || form.controls['ConfirmPassword'].touched)" class="invalid-feedback"> Password mismatched</div>
+
+                <div *ngIf="submitted && f.ConfirmPassword.errors" class="invalid-feedback">
+                    <div *ngIf="f.ConfirmPassword.errors.required">Password is required</div>
+                    <div *ngIf="f.ConfirmPassword.errors.minlength">Password should at least 6 digit</div>
+                    <div *ngIf="f.ConfirmPassword.errors.mismatch">All charecter should not space</div>
+                </div>
+            </div>
+            <span>Role: </span>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Role" id="userRole" value="user">
+                <label class="form-check-label" for="userRole">USER</label>
+            </div>
+            <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" formControlName="Role" id="adminRole" 
+                    value="admin" [attr.disabled]="!isAdmin">
+                <label class="form-check-label" for="adminRole">ADMIN</label>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary">
+                    <span *ngIf="submitted" class="spinner-border spinner-border-sm mr-1"></span>
+                    Update
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
